--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </nav>
 
         <div class="img">
-            <img src="birthday/ju4-removebg-preview.png" alt="">
+            <img src="ju2-removebg-preview.png" alt="">
         </div>
 
         <div class="title">
