--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </nav>
 
         <div class="img">
-            <img src="Untitled-4.jpg" alt="">
+            <img src="juhai.jpg" alt="">
         </div>
 
         <div class="title">
